# rustcracker

./: .gitignore  Cargo.toml  PERFORMANCE_OPTIMIZATION.md  README.md  benchmark_quickstart.sh  build.rs  run_benchmarks.sh  rust-toolchain.toml  test_wordlist.txt
benches/: benchmark_utils.rs  cracker_benchmark.rs  gpu_timing_benchmark.rs
docs/: benchmarking-guide.md
shader/: Cargo.toml
shader/src/: lib.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
