[package]
name = "rustcracker"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
hex = "0.4"
md5 = "0.8" # For testing/verification
pollster = "0.4"
wgpu = { version = "27", features = ["spirv"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "29ba02d61e0d3393f747831f79d0db1128bcb88d" }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "cracker_benchmark"
harness = false

[[bench]]
name = "gpu_timing_benchmark"
harness = false
